fixed issue with scrollbar

--- a/Frontend/src/shared/style/index.css
+++ b/Frontend/src/shared/style/index.css
@@ -21,10 +21,14 @@
 @layer base {
     body {
         @apply font-serif tracking-wide;
+        height: 100%;
+        overflow: hidden;
     }
 
     html {
         font-weight: var(--font-weight-medium);
+        height: 100%;
+        overflow: hidden;
     }
 
     h1 {
